Added support for point layers, and did some format cleanup. Put in placeholder for (likely) use of Maki icons.

--- a/LD3.html
+++ b/LD3.html
@@ -47,6 +47,7 @@
 <li>School performance data from CA Dept of Education, <a href="http://caaspp.cde.ca.gov/sb2015/ResearchFileList">http://caaspp.cde.ca.gov/sb2015/ResearchFileList</a></li>
 <li>School District shapes from the US Census (TIGER), <a href="https://www.census.gov/geo/maps-data/data/tiger-line.html">https://www.census.gov/geo/maps-data/data/tiger-line.html</a></li>
 <li>San Mateo park shapes from the Open San Mateo data portal.</li>
+<li>Icons from the Mapbox Maki project, <a href="https://github.com/mapbox/maki">https://github.com/mapbox/maki</a>, CC0-licensed.</li>
 </ol>
 
 <script src="LD3_lib.js"></script>
