Updated to make it clear this is a tech demo, and to add a Google forms survey.

--- a/LD3.html
+++ b/LD3.html
@@ -8,6 +8,7 @@
      Copyright R. A. Reitmeyer 2016
 -->
 <head>
+  <title>OpenSMC Service Locator Demo and Survey</title>
   <!-- use these CDN versions online -->
   <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.5/leaflet.js"></script>
@@ -24,13 +25,26 @@
 </head>
 <body>
 
+<p class="page_title">OpenSMC Service Locator Demo and Survey</p>
+
+<p>This is a technology demonstration of a Service Locator for San
+Mateo County.  We'd like to show residents local services and
+facilities with a map-based interface like the below.  As a proof of
+concept, it is not intended to be pretty, or even very useful yet, but
+we want to use it to get feedback. Please play with the map a little,
+then answer the questions below. We have many questions, because we have
+many ideas.
+</p>
+
 <div id="map_div">
 </div>
 
 <div id="legend_div">
 </div>
 
+<iframe src="https://docs.google.com/forms/d/1nAOpc4tWtoBqdp9D9fH70WIdMdLaytESmeLfRxtoKdk/viewform?embedded=true" width="800" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
+<div id="credits">
 <h3>Credits</h3>
 <p id="credits">Copyright R. A. Reitmeyer, 2016. This page would not have been possible without the following:
 </p>
@@ -49,6 +63,7 @@
 <li>San Mateo park shapes from the Open San Mateo data portal.</li>
 <li>Icons from the Mapbox Maki project, <a href="https://github.com/mapbox/maki">https://github.com/mapbox/maki</a>, CC0-licensed.</li>
 </ol>
+</div>
 
 <script src="LD3_lib.js"></script>
 <script src="LD3.js"></script>
